# python-project-83

./: .env_secret  .gitignore  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: .env_secret  Makefile  app.py  build.sh  parser.py  pyproject.toml  url_repository.py  url_validator.py  utils.py
page_analyzer/templates/: index.html  show.html  urls.html
